OT patient search and overlapping issue resolved.

--- a/ui/app/styles/ot-rtl/_otCalendar.scss
+++ b/ui/app/styles/ot-rtl/_otCalendar.scss
@@ -175,6 +175,7 @@
           bottom: 0;
           margin: auto;
           height: 16px;
+            right: 230px;
         }
       }
     }
@@ -222,6 +223,7 @@
       input {
         width: 100% !important;
         box-sizing: border-box;
+        padding: 5px;
       }
 
       .tag-list {
